--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Accessible Portfolio</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <header role="banner">
+    <h1 role="heading" aria-level="1">My Portfolio</h1>
+  </header>
 
+  <nav role="navigation">
+    <ul role="list">
+      <li role="listitem"><a href="#home">Home</a></li>
+      <li role="listitem"><a href="#about">About</a></li>
+      <li role="listitem"><a href="#projects">Projects</a></li>
+      <li role="listitem"><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="home">
+      <h2 role="heading" aria-level="2">Welcome to my portfolio!</h2>
+      <img src="profile.jpg" alt="Profile Picture" role="img">
+      <p>This is the home section of my portfolio.</p>
+    </section>
+
+    <section id="about">
+      <h2 role="heading" aria-level="2">About Me</h2>
+      <p>I am a web developer with expertise in HTML, CSS, and JavaScript.</p>
+    </section>
+
+    <section id="projects">
+      <h2 role="heading" aria-level="2">Projects</h2>
+      <ul role="list">
+        <li role="listitem">Project 1</li>
+        <li role="listitem">Project 2</li>
+        <li role="listitem">Project 3</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2 role="heading" aria-level="2">Contact Me</h2>
+      <p>You can reach me at contact@example.com</p>
+    </section>
+  </main>
 </body>
-
 </html>
